--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                     </form>
                 </div>
                 <div class="authorization-container">
-                    <div class="authorization">
+                    <div class="authorization authorization-header">
                         <a href="#">Войти</a>
                     </div>
-                    <div>
+                    <div class="compare">
                         <a href="#">Сравнить</a>
                     </div>
-                    <div>
+                    <div class="basket">
                         <a href="#" >Корзина</a>
                     </div>
                 </div>
@@ -38,125 +38,149 @@
                     <li><a href="#">Гарантия</a></li>
                     <li><a href="#">Контакты</a></li>
                 </ul>
-                <div class="cotalog-container cotalog-show">
+                <div class="cotalog-container">
                     <ul class="header-cotalog">
-                        <li><a href="#">Виртуальная реальность</a></li>
-                        <li><a href="#">Фитнеc-браслеты</a></li>
-                        <li><a href="#">Квадрокоптеры</a></li>
-                        <li><a href="catalog.html">Моноподы для селфи</a></li>
-                        <li><a href="#">Умные часы</a></li>
-                        <li></li>
-                        <li><a href="#">Экшн-камеры</a></li>
+                        <li>
+                            <a href="#">Виртуальная реальность</a>
+                            <a href="catalog.html">Моноподы для селфи</a>
+                            <a href="#">Экшн-камеры</a>
+                        </li>
+                        <li>
+                            <a href="#">Фитнеc-браслеты</a>
+                            <a href="#">Умные часы</a>
+                        </li>
+                        <li>
+                            <a href="#">Квадрокоптеры</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
         </header>
         <main class="main main-index">
-			<ul class="slider-list container">
-				<li class="sider-item block-show">
-                    <div class="offers">
-                        <img src="img/slider-1.png" alt="Самая длинная селфи палка" width="384" height="486">
-                        <div class="slider-container">
-    						<b>Делай селфи, как Бен Стиллер!</b>
-    						<p>
-    							Самая длинная палка для селфи доступна в нашем магазине.
-                                Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
-    						</p>
-    						<a href="#" class="button"> Подробнее</a>
-    						<table class="table-slider">
-    							<tr>
-    								<th>Длина палки</th>
-    								<th>Вес палки</th>
-    								<th>Материал</th>
-    							</tr>
-    							<tr>
-    								<td>8,5 м</td>
-    								<td>5 кг</td>
-    								<td>Карбон</td>
-    							</tr>
-    						</table>
+            <div class="slider container">
+                <ul class="slides-button-list">
+                    <li>
+                        <a href="http://www.slamdunk.ru/" class="slide-button slide-one">
+                            <span class="visually-hidden">Первый слайд</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="slide-button slide-two">
+                            <span class="visually-hidden">Второй слайд</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="slide-button slide-three">
+                            <span class="visually-hidden">Третий слайд</span>
+                        </a>
+                    </li>
+                </ul>
+    			<ul class="slider-list container">
+    				<li class="slider-item slider-monopod block-show">
+                        <div class="offers">
+                            <img src="img/slider-1.png" alt="Самая длинная селфи палка" width="384" height="486">
+                            <div class="slider-container">
+        						<b>Делай селфи, как Бен Стиллер!</b>
+        						<p>
+        							Самая длинная палка для селфи доступна в нашем магазине.
+                                    Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
+        						</p>
+        						<a href="#" class="button"> Подробнее</a>
+        						<table class="table-slider">
+        							<tr>
+        								<th>Длина палки</th>
+        								<th>Вес палки</th>
+        								<th>Материал</th>
+        							</tr>
+        							<tr>
+        								<td>8,5 м</td>
+        								<td>5 кг</td>
+        								<td>Карбон</td>
+        							</tr>
+        						</table>
+                            </div>
                         </div>
-                    </div>
-				</li>
-				<li class="sider-item">
-                    <div class="offers">
-                        <img src="img/slider-2.png" alt="Фитнес-браслет" width="345" height="485">
-                        <div class="slider-container">
-    						<b>Худеем правильно!</b>
-    						<p>
-    							Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
-    						</p>
-    						<a href="#" class="button"> Подробнее</a>
-    						<table class="table-slider">
-    							<tr>
-    								<th>Без подзарядки</th>
-    							</tr>
-    							<tr>
-    								<td>48 часов</td>
-    							</tr>
-    						</table>
+    				</li>
+    				<li class="slider-item slider-smartWatch  ">
+                        <div class="offers">
+                            <img src="img/slider-2.png" alt="Фитнес-браслет" width="345" height="485">
+                            <div class="slider-container">
+        						<b>Худеем правильно!</b>
+        						<p>
+        							Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
+        						</p>
+        						<a href="#" class="button"> Подробнее</a>
+        						<table class="table-slider">
+        							<tr>
+        								<th>Без подзарядки</th>
+        							</tr>
+        							<tr>
+        								<td>48 часов</td>
+        							</tr>
+        						</table>
+                            </div>
                         </div>
-                    </div>
-				</li>
-				<li class="sider-item">
-                    <div class="offers">
-                        <img src="img/slider-3.png" alt="Квадрокоптер" width="526" height="334">
-                        <div class="slider-container">
-    						<b>Порхает как бабочка, жалит как пчела!</b>
-    						<p>
-    							Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
-    						</p>
-    						<a href="#" class="button"> Подробнее</a>
-    						<table class="table-slider">
-    							<tr>
-    								<th>Дальность полета</th>
-    								<th>Радиус поражения</th>
-    							</tr>
-    							<tr>
-    								<td>800 м</td>
-    								<td>50 м</td>
-    							</tr>
-    						</table>
+    				</li>
+    				<li class="slider-item slider-drons ">
+                        <div class="offers">
+                            <img src="img/slider-3.png" alt="Квадрокоптер" width="526" height="334">
+                            <div class="slider-container">
+        						<b>Порхает как бабочка, жалит как пчела!</b>
+        						<p>
+        							Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
+        						</p>
+        						<a href="#" class="button"> Подробнее</a>
+        						<table class="table-slider">
+        							<tr>
+        								<th>Дальность полета</th>
+        								<th>Радиус поражения</th>
+        							</tr>
+        							<tr>
+        								<td>800 м</td>
+        								<td>50 м</td>
+        							</tr>
+        						</table>
+                            </div>
                         </div>
-                    </div>
-				</li>
-			</ul>
+    				</li>
+    			</ul>
+            </div>
             <div class="container">
     			<ul class="index-cotalog-list">
     				<li class="index-cotalog-item cotalog-vr">
     					<a href="#">
                             <div class="icon-container"></div>
-                            Виртуальная реальность
+                            <p>Виртуальная реальность</p>
                         </a>
     				</li>
     				<li class="index-cotalog-item cotalog-monopods">
     					<a href="catalog.html">
                             <div class="icon-container"></div>
-                            Моноподы для селфи
+                            <p>Моноподы для селфи</p>
                         </a>
     				</li>
     				<li class="index-cotalog-item cotalog-camera">
     					<a href="#">
                             <div class="icon-container"></div>
-                            Экшн-камеры
+                            <p>Экшн-камеры</p>
                         </a>
     				</li>
     				<li class="index-cotalog-item cotalog-fitBracelet">
     					<a href="#">
                             <div class="icon-container"></div>
-                            Фитнеc-браслеты
+                            <p>Фитнеc-браслеты</p>
                         </a>
     				</li>
     				<li class="index-cotalog-item cotalog-smartWatch">
     					<a href="#">
                             <div class="icon-container"></div>
-                            Умные часы
+                            <p>Умные часы</p>
                         </a>
     				</li>
     				<li class="index-cotalog-item cotalog-drons">
     					<a href="#">
-    					<div class="icon-container"></div>
-                            Квадрокоптеры
+    					    <div class="icon-container"></div>
+                            <p>Квадрокоптеры</p>
                         </a>
     				</li>
     			</ul>
